SimpleComplex/Validate 2.x, 2019-01-25
--------------------------------------
- The 'bit' rule must allow string 0|1.
- Release 2.4.1.

SimpleComplex/Validate 2.x, 2019-01-24
--------------------------------------
- ValidationRuleSet must have (same) recursion limit as well.
- New non-provider rule alternativeRuleSet, supporting a fallback rule set
  when main rules - and alternativeEnum - fails.
- Release 2.4.

SimpleComplex/Validate 2.x, 2019-01-21
--------------------------------------
- Depends on Utils >=1.11, because ValidationFailureException does.
- Release 2.3.
- New rule camelName().

SimpleComplex/Validate 2.x, 2019-01-19
--------------------------------------
- ISO-8601 rules with subSeconds parameter now default to class constant
  for maximum sub seconds, and sub-zero value of that parameter no longer
  spells exception.
- New dateISO8601() ultimate catch-all date/datetime ISO-8601.

SimpleComplex/Validate 2.x, 2019-01-12
--------------------------------------
- Ensure that rule set values accord with whether rule methods accept
  (or even require) more arguments than subject self.
- RuleProviderInterface new method getParameterMethods().
- challengeRecording() allow for top level key-path name,
  and record arguments passed on validation failure.

SimpleComplex/Validate 2.x, 2019-01-08
--------------------------------------
- Release 2.2.

SimpleComplex/Validate 2.x, 2019-01-07
--------------------------------------
- ValidationRuleSet constructor's second argument is (preferably) now
  a rule provider or a rule provider info object; not rule-methods-available.
- ValidationRuleSet::ruleMethodsAvailable() is now deprecated.
- RuleProviderInterface new method getTypeMethods().

SimpleComplex/Validate 2.x, 2019-01-06
--------------------------------------
- No rules methods but 'empty' and 'null' must allow (pass) null.
- New non-rule method 'allowNull', for nested (object|array bucket) elements.
- New rule method 'bit'.
- Type-checking rule methods.
